[gd_scene load_steps=12 format=3 uid="uid://cqh0poxngdc4s"]

[ext_resource type="Script" uid="uid://chx2x4bnhsf18" path="res://scripts/scenes/seating/3d/xr_player_3d.gd" id="1_rp40j"]
[ext_resource type="PackedScene" uid="uid://bvpnxbqyuutkv" path="res://data/3d/player.blend" id="2_0qmox"]
[ext_resource type="Script" uid="uid://cximc26fn7ju2" path="res://scripts/scenes/seating/back_area_detector.gd" id="3_omcew"]
[ext_resource type="Texture2D" uid="uid://c1o8xka0o302d" path="res://data/icons/can_sit_icon.svg" id="3_udnlm"]
[ext_resource type="Script" uid="uid://c2vtdebm0rkva" path="res://scripts/scenes/seating/personal_space_detector.gd" id="4_udnlm"]
[ext_resource type="PackedScene" uid="uid://bsebevtfokfkx" path="res://scenes/ui/dialog_system.tscn" id="5_orep6"]
[ext_resource type="PackedScene" uid="uid://wba10kmwy7j2" path="res://scenes/ui/result_ui.tscn" id="6_hbiyl"]

[sub_resource type="QuadMesh" id="QuadMesh_orep6"]
size = Vector2(2.08, 1.17)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_omcew"]
transparency = 1
shading_mode = 0
albedo_texture = ExtResource("3_udnlm")
texture_repeat = false
billboard_keep_scale = true

[sub_resource type="QuadMesh" id="QuadMesh_udnlm"]
material = SubResource("StandardMaterial3D_omcew")
size = Vector2(0.06, 0.06)

[sub_resource type="SphereMesh" id="SphereMesh_udnlm"]
flip_faces = true
radius = 0.7
height = 1.4

[node name="XrPlayer3D" type="CharacterBody3D"]
script = ExtResource("1_rp40j")

[node name="PlayerCollision" type="CollisionShape3D" parent="."]

[node name="player" parent="." instance=ExtResource("2_0qmox")]

[node name="Pivot" type="Node3D" parent="."]

[node name="BackAreaDetector" type="Area3D" parent="Pivot"]
script = ExtResource("3_omcew")

[node name="BackAreaCollision" type="CollisionShape3D" parent="Pivot/BackAreaDetector"]

[node name="PersonalSpaceDetector" type="Area3D" parent="Pivot"]
script = ExtResource("4_udnlm")

[node name="PersonalSpaceCollision" type="CollisionShape3D" parent="Pivot/PersonalSpaceDetector"]

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="Head" type="Node3D" parent="XROrigin3D"]

[node name="UIPanel" type="Node3D" parent="XROrigin3D/Head"]

[node name="PanelMesh" type="MeshInstance3D" parent="XROrigin3D/Head/UIPanel"]
mesh = SubResource("QuadMesh_orep6")

[node name="SubViewport" type="SubViewport" parent="XROrigin3D/Head/UIPanel"]
transparent_bg = true
size = Vector2i(1920, 1080)

[node name="DialogSystem" parent="XROrigin3D/Head/UIPanel/SubViewport" instance=ExtResource("5_orep6")]

[node name="ResultUI" parent="XROrigin3D/Head/UIPanel/SubViewport" instance=ExtResource("6_hbiyl")]

[node name="CanSitDownIconMesh" type="MeshInstance3D" parent="XROrigin3D/Head"]
transform = Transform3D(1, 0, 0, 0, 0.967529, 0.252762, 0, -0.252762, 0.967529, 0, -0.341697, -0.466894)
visible = false
gi_lightmap_texel_scale = 1.9392
mesh = SubResource("QuadMesh_udnlm")

[node name="DissolveOverlayMesh" type="MeshInstance3D" parent="XROrigin3D/Head"]
visible = false
mesh = SubResource("SphereMesh_udnlm")
skeleton = NodePath("../XRCamera3D")

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D/Head"]

[node name="LeftController" type="XRController3D" parent="XROrigin3D"]
tracker = &"left_hand"

[node name="RightController" type="XRController3D" parent="XROrigin3D"]
tracker = &"right_hand"
